Added testing and WatchMovie endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 /NetflixApi.Domain/NetflixApi.Domain/obj
 /NetflixApi.Infrastructure/bin/Debug/net8.0
 /NetflixApi.Infrastructure/obj
+.vs
+NetflixApi.Domain/NetflixApi.Application.IntegrationTests/bin
+NetflixApi.Domain/NetflixApi.Application.IntegrationTests/obj
