--- a/NetflixApi.Api/appsettings.json
+++ b/NetflixApi.Api/appsettings.json
@@ -18,8 +18,8 @@
       {
         "Name": "ApplicationInsights",
         "Args": {
-          "connectionString": "InstrumentationKey=81fc109c-4896-4a19-b5a8-2179900c22ae;IngestionEndpoint=https://eastus-8.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus.livediagnostics.monitor.azure.com/",
-          "telemetryConverter": "Serilog.Sinks.ApplicationInsights.TelemetryConverters.TraceTelemetryConverter, Serilog.Sinks.ApplicationInsights"
+          "connectionString": "",
+          "telemetryConverter": ""
         }
       }
     ],
