Added watch page

--- a/NetflixApi.Api/appsettings.json
+++ b/NetflixApi.Api/appsettings.json
@@ -18,8 +18,8 @@
       {
         "Name": "ApplicationInsights",
         "Args": {
-          "connectionString": "",
-          "telemetryConverter": ""
+          "connectionString": "InstrumentationKey=c3f695a2-3947-43c3-ae64-68b13609038d;IngestionEndpoint=https://southafricanorth-1.in.applicationinsights.azure.com/;LiveEndpoint=https://southafricanorth.livediagnostics.monitor.azure.com/",
+          "telemetryConverter": "Serilog.Sinks.ApplicationInsights.TelemetryConverters.TraceTelemetryConverter, Serilog.Sinks.ApplicationInsights"
         }
       }
     ],
